--- a/Assignment-Week1/index.html
+++ b/Assignment-Week1/index.html
@@ -9,6 +9,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
     <script src="Sol_Lewitt56.js" type="text/javascript"></script>
+    <script src="Sol_Lewitt87.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
